# learn_LLM

./: .gitignore  Chapter1.py  Chapter2.py  README.md  Transformers_강좌.ipynb  pyproject.toml
ipynb/: Transformers_강좌.ipynb
qmd/: Korean_translator.qmd  LLMsFromScratch.qmd  LLMsfromScratch.qmd  NLP_course_1.qmd  intro_pytorch.qmd
