[project]
name = "learn-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.0.1",
    "datasets>=3.0.2",
    "evaluate>=0.4.3",
    "faiss-gpu>=1.7.2",
    "numpy<2",
    "scikit-learn>=1.5.2",
    "scipy>=1.13.1",
    "torch>=2.5.0",
    "tqdm>=4.66.5",
    "transformers>=4.45.2",
    "zstandard>=0.23.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "uv>=0.4.26",
]
